# fetchin

./: .flake8  Makefile  README.md  docker-compose.yml  playground.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy_pypi.yml  deploy_testpypi.yml  quality.yml
http_helper/fetcher/: fetcher.py
http_helper/logging/: logger.py
http_utils/: __init__.py
http_utils/fetcher/: __init__.py  fetcher.py
http_utils/logging/: logger.py
http_utils/metrics/: __init__.py  metrics.py  metrics_interface.py  prometheus_metrics.py
src/fetchin/: __init__.py
src/fetchin/fetcher/: __init__.py  fetcher.py
src/fetchin/logging/: __init__.py  logger.py
src/fetchin/metrics/: __init__.py
src/http_helper/: __init__.py
src/http_helper/fetcher/: fetcher.py
src/http_helper/metrics/: prometheus_metrics.py
stubs/mappings/: example-mock.json
tests/: __init__.py  test_fetcher.py  test_logger.py  test_prometheus_metrics.py
